# rpi-pico-notes

./: .gitignore  Readme.txt
blink/: CMakeLists.txt  blink.c
